# SchoolAI

./: .gitignore
core-caht/: .gitignore  README.md  alembic.ini  package-lock.json  test_prompts.sh  webhook_app.py
core-caht/app/: main.py
core-caht/scripts/: fix.py  seed_intent_config.py
doneFrontend/: .env  package.json
doneFrontend/contexts/: AuthContext.tsx
doneFrontend/services/: chatRating.ts  chats.ts
olajiAI/: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
olajiAI/app/: main.py
olajiAI/app/ai/: intents.py  llm.py  orchestrator.py  prompt_templates.py
olajiAI/app/ai/tools/: base.py  class_query.py  class_student_analytics.py  create_class.py  enroll_student.py  fee_operations.py  fees.py  modify_fee.py  school_facts.py  send_notification.py  student_query.py
olajiAI/app/core/: config.py  database.py  http.py  logging.py  redis.py
olajiAI/app/models/: base.py  chat.py
olajiAI/app/repositories/: chat.py
olajiAI/app/routers/: chats.py
olajiAI/app/state/: memory.py
olajiAI/migrations/: env.py
olajiAI/migrations/versions/: b7cf35b5c209_create_chats_messages_and_migrate_from_.py  cc14bf5c0fe8_add_starred_to_chats.py
olajiAI/tests/: e2e_create_class.test.http  e2e_enroll_student.test.http  e2e_modify_fee.test.http  e2e_notify_debtors.test.http
school-ai-backend/: .env  .env.example  alembic.ini  requirements.txt  test_financials.sh
school-ai-backend/app/: main.py
school-ai-backend/migrations/: env.py
whatsapp-bridge/: package-lock.json  package.json  server.js
(+1331 files in other folders)
